finalize changelog for nvidia-graphics-drivers (352.79-6)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6410 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (352.79-6) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (352.79-6) unstable; urgency=medium
 
   * separate-makefile-kbuild.patch: New, don't make all Makefile targets
     available to Kbuild.
@@ -12,7 +12,7 @@ nvidia-graphics-drivers (352.79-6) UNRELEASED; urgency=medium
   * Add B-D: dpkg-dev (>= 1.17.0) for dpkg-parsechangelog --show-field.
   * Bump Standards-Version to 3.9.8. No changes needed.
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 12 Mar 2016 18:22:44 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 12 Apr 2016 03:07:52 +0200
 
 nvidia-graphics-drivers (352.79-5) unstable; urgency=medium
 
