--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
 
+  [ Andreas Beckmann ]
   * Drop substitution backward-compatibility with EoL
     nvidia-graphics-drivers-legacy-173xx and
     nvidia-graphics-drivers-legacy-96xx in favor of a reduced diff to
@@ -33,6 +34,13 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * Use NVIDIA's conftest.sh script to determine settings during module build
     instead of our manually maintained conftest.h header.
   * Disable conftest.sh checks cc_version_check, xen_sanity_check.
+  * Merge changes from 304.131-1 (jessie).
+
+  [ Luca Boccassi ]
+  * Add disable-mtrr.patch to disable MTRR in the kernel module if
+    building on 4.3 or greater, where the deprecated APIs the kernel module
+    uses are no longer exported, causing a failure when the module is
+    loaded at runtime. (Closes: #809324)
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 13:04:27 +0100
 
