stop shipping unused pci.ids file
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@6443 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,7 @@ nvidia-graphics-drivers (340.96-1+) UNRELEASED; urgency=medium
   * Add B-D: dpkg-dev (>= 1.17.0) for dpkg-parsechangelog --show-field.
   * Bump Standards-Version to 3.9.8. No changes needed.
   * Update lintian overrides.
+  * Stop shipping unused pci.ids file.
 
   [ Luca Boccassi ]
   * arm-outer-sync.patch: backport from trunk to fix kernel module build
