--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-nvidia-graphics-drivers (352.79-7) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (352.79-7) unstable; urgency=medium
 
+  [ Luca Boccassi ]
   * Add page-cache-release.patch, vm-fault-minor.patch (uvm only),
     uvmnext-isr-top-half.patch (uvm only) and rm_kernel_rmapi_op.patch
     to fix kernel module build for Linux 4.6.
 
- -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 18 Apr 2016 01:11:49 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 22 Apr 2016 12:26:07 +0200
 
 nvidia-graphics-drivers (352.79-6) unstable; urgency=medium
 
