--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ nvidia-graphics-drivers (355.11-4) UNRELEASED; urgency=medium
 
   * Merge changes from 352.79-7.
   * Drop rm_kernel_rmapi_op.patch, fixed upstream.
+  * nvidia-driver-libs: New metapackage for bundling the Depends/Recommends on
+    the GL/GLX/EGL packages.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 27 Feb 2016 02:11:22 +0100
 
