Add page-cache-release-uvm.patch to fix build on kernel 4.6. This is a new problem in 361, so added separately.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/361@6480 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -74,6 +74,7 @@ nvidia-graphics-drivers (361.42-1) UNRELEASED; urgency=medium
   * Update symbols files
   * Updated libgl1-nvidia-glx package to ship libglvnd's version of libGL.so.1
     on i386 and amd64. Upstream ships only non-libglvnd libraries on ARM.
+  * Add page-cache-release-uvm.patch to fix kernel module build on 4.6
 
   [ Andreas Beckmann ]
   * Update lintian overrides.
