Add drm_mode_fb_cmd2.patch to fix kernel module build on 4.6
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/364@6483 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,8 @@ nvidia-graphics-drivers (364.19-1) UNRELEASED; urgency=medium
       sudo modprobe -r nvidia-drm; sudo modprobe nvidia-drm modeset=1
   * Add nvidia_drm_arm_cflags.patch to fix nvidia-drm kernel module build
     failure on armhf.
+  * Add drm_mode_fb_cmd2.patch to fix nvidia-drm kernel module build failure
+    on 4.6
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 06 Apr 2016 22:21:26 +0100
 
