--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,8 @@ nvidia-graphics-drivers (364.19-1) UNRELEASED; urgency=medium
     failure on armhf.
   * Add drm_mode_fb_cmd2.patch to fix nvidia-drm kernel module build failure
     on 4.6
+  * Add do_div_cast.patch to fix nvidia-modeset kernel module build failure
+    on 4.6
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 06 Apr 2016 22:21:26 +0100
 
