Add get_user_page.patch to fix kernel module build failure on 4.6+
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6507 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 nvidia-graphics-drivers (352.79-8) UNRELEASED; urgency=medium
 
+  [ Andreas Beckmann ]
   * Update lintian overrides.
+
+  [ Luca Boccassi ]
+  * Add get_user_page.patch to fix kernel module build failure on 4.6+.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 27 Apr 2016 18:22:27 +0200
 
