--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,7 @@ nvidia-graphics-drivers (367.18-1) UNRELEASED; urgency=medium
       from sleep or hot-replug.
   * Update watch file to point to 367 release
   * Update nv-readme.ids
+  * Update symbols files
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Fri, 20 May 2016 01:55:24 +0100
 
