Drop drm_mode_fb_cmd2.patch, fixed upstream
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/367@6513 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,7 @@ nvidia-graphics-drivers (367.18-1) UNRELEASED; urgency=medium
   * Update watch file to point to 367 release
   * Update nv-readme.ids
   * Update symbols files
+  * Drop drm_mode_fb_cmd2.patch, fixed upstream.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Fri, 20 May 2016 01:55:24 +0100
 
