--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ nvidia-graphics-drivers (352.79-8) UNRELEASED; urgency=medium
   * Update lintian overrides.
 
   [ Luca Boccassi ]
-  * Add get_user_page.patch to fix kernel module build failure on 4.6+.
+  * Add get-user-pages.patch to fix kernel module build failure on 4.6+.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 27 Apr 2016 18:22:27 +0200
 
