--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,24 @@
-nvidia-graphics-drivers (361.42-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (361.45.11-1) UNRELEASED; urgency=medium
 
   [ Luca Boccassi ]
+  * New upstream long lived branch release 361.45.11 (2016-05-24).
+    - Fixed a bug that sometimes prevented flipping from being enabled on
+      systems with multiple displays.
+    - Fixed a bug that could cause applications to crash when using the 
+      EGL_EXT_platform_device extension on a system with multiple GPUs.
+    - Fixed a bug that could cause nvidia-installer's runtime loader test
+      to fail spuriously on some systems.
+    - The NVIDIA Unified Virtual Memory kernel module, nvidia-uvm.ko, now
+      has a minimum kernel requirement of Linux 2.6.32. On older kernel
+      versions, nvidia-uvm.ko will be compiled as a stub kernel module
+      which does not provide any functionality.
+    - Added support for the following GPUs: Tesla M40 24GB, Quadro M5500,
+      Quadro M2000
+    - Updated the libglvnd snapshot included in the NVIDIA driver
+      package to libglvnd commit b7d75429677eecc00c3701aaa4deac1304bc51ff.
+      This contains a new revision of the libglvnd ABI. The driver is not
+      compatible with a libglvnd older than commit
+      c5bcda3b848fe52d6ae6ef25c917431c06d62d27.
   * New upstream long lived branch release 361.42 (2016-03-30).
     - Added support for the following GPUs: GeForce 920MX, GeForce 930MX,
       Quadro M6000 24GB.
