Rename new unpublished patches to match naming convention (- instead of _)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/364@6522 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -58,11 +58,11 @@ nvidia-graphics-drivers (364.19-1) UNRELEASED; urgency=medium
     This new module is distributed without any binary blos. For now modeset is
     disabled by default, and it can be enabled manually via:
       sudo modprobe -r nvidia-drm; sudo modprobe nvidia-drm modeset=1
-  * Add nvidia_drm_arm_cflags.patch to fix nvidia-drm kernel module build
+  * Add nvidia-drm-arm-cflags.patch to fix nvidia-drm kernel module build
     failure on armhf.
-  * Add drm_mode_fb_cmd2.patch to fix nvidia-drm kernel module build failure
+  * Add drm-mode-fb-cmd2.patch to fix nvidia-drm kernel module build failure
     on 4.6
-  * Add do_div_cast.patch to fix nvidia-modeset kernel module build failure
+  * Add do-div-cast.patch to fix nvidia-modeset kernel module build failure
     on 4.6
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 06 Apr 2016 22:21:26 +0100
