--- a/debian/changelog
+++ b/debian/changelog
@@ -92,6 +92,8 @@ nvidia-graphics-drivers (361.45.11-1) UNRELEASED; urgency=medium
   * Update symbols files
   * Updated libgl1-nvidia-glx package to ship libglvnd's version of libGL.so.1
     on i386 and amd64. Upstream ships only non-libglvnd libraries on ARM.
+  * Add do-div-cast.patch to fix nvidia-modeset kernel module build failure
+    on 4.6.
 
   [ Andreas Beckmann ]
   * Update lintian overrides.
