--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ nvidia-graphics-drivers (352.79-8) UNRELEASED; urgency=medium
 
   [ Luca Boccassi ]
   * Add get-user-pages.patch to fix kernel module build failure on 4.6+.
+    (Closes: #826190)
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 27 Apr 2016 18:22:27 +0200
 
