new metapackage nvidia-driver-libs
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@6540 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,8 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * Use NVIDIA's conftest.sh script to determine settings during module build
     instead of our manually maintained conftest.h header.
   * Disable conftest.sh checks cc_version_check, xen_sanity_check.
+  * nvidia-driver-libs: New metapackage for bundling the
+    Depends/Recommends on the GL/GLX packages.
 
   [ Luca Boccassi ]
   * Add disable-mtrr.patch to disable MTRR in the kernel module if
