replace libgl1-nvidia-glx-i386 with new nvidia-driver-libs-i386 metapackage
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@6541 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,8 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * Disable conftest.sh checks cc_version_check, xen_sanity_check.
   * nvidia-driver-libs: New metapackage for bundling the
     Depends/Recommends on the GL/GLX packages.
+  * Replace libgl1-nvidia-glx-i386 with new
+    nvidia-driver-libs-i386 metapackage.
 
   [ Luca Boccassi ]
   * Add disable-mtrr.patch to disable MTRR in the kernel module if
