--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,12 @@
-nvidia-graphics-drivers (367.18-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (367.27-1) UNRELEASED; urgency=medium
 
+  * New upstream long lived branch release 367.27 (2016-06-13).
+    - Added support for VDPAU Feature Set H to the NVIDIA VDPAU driver.
+      GPUs with VDPAU Feature Set H are capable of hardware-accelerated
+      decoding of 8192x8192 (8k) H.265/HEVC video streams.
+    - Added support for the following GPUs: GeForce GTX 1080, GeForce GTX 1070.
+    - Fixed a bug that caused the X server to sometimes skip displaying Vulkan
+      frames when the Composite extension is enabled.
   * New upstream beta release 367.18 (2016-05-19).
     - Fixed a bug that would cause OpenGL applications to crash when creating
       a context on one X display connection, then making it current with no
