Close #827391 in changelog
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/367@6570 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (367.27-1) UNRELEASED; urgency=medium
 
   * New upstream long lived branch release 367.27 (2016-06-13).
+    (Closes: #827391)
     - Added support for VDPAU Feature Set H to the NVIDIA VDPAU driver.
       GPUs with VDPAU Feature Set H are capable of hardware-accelerated
       decoding of 8192x8192 (8k) H.265/HEVC video streams.
