--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (355.11-5) UNRELEASED; urgency=medium
 
   * Merge changes from 352.79-8.
+  * libnvidia-glcore: New package, split from libgl1-nvidia-glx.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 28 Apr 2016 01:16:39 +0200
 
