Add radix-tree-empty.patch to fix kernel module build failure on 4.7-rc4
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/361@6581 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -92,6 +92,8 @@ nvidia-graphics-drivers (361.45.11-1) UNRELEASED; urgency=medium
   * Update symbols files
   * Add do-div-cast.patch to fix nvidia-modeset kernel module build failure
     on 4.6.
+  * Add radix-tree-empty.patch to fix nvidia-uvm kernel module build failure
+    on 4.7.
 
   [ Andreas Beckmann ]
   * Update lintian overrides.
