Update changelog for new upstream long lived branch release 361.45.18
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/361@6586 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
-nvidia-graphics-drivers (361.45.11-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (361.45.18-1) UNRELEASED; urgency=medium
 
   [ Luca Boccassi ]
+  * New upstream long lived branch release 361.45.18 (2016-06-28).
+    - Fixed a bug that caused nvidia-smi to report an inaccurate version
+      number.
   * New upstream long lived branch release 361.45.11 (2016-05-24).
     - Fixed a bug that sometimes prevented flipping from being enabled on
       systems with multiple displays.
