split out libnvidia-glcore
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@6596 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,7 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
     Depends/Recommends on the GL/GLX packages.
   * Replace libgl1-nvidia-glx-i386 with new
     nvidia-driver-libs-i386 metapackage.
+  * libnvidia-glcore: New package, split from libgl1-nvidia-glx.
 
   [ Luca Boccassi ]
   * Add disable-mtrr.patch to disable MTRR in the kernel module if
