it is called OpenGL
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@6599 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,7 +35,7 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
     instead of our manually maintained conftest.h header.
   * Disable conftest.sh checks cc_version_check, xen_sanity_check.
   * nvidia-driver-libs: New metapackage for bundling the
-    Depends/Recommends on the GL/GLX packages.
+    Depends/Recommends on the OpenGL/GLX packages.
   * Replace libgl1-nvidia-glx-i386 with new
     nvidia-driver-libs-i386 metapackage.
   * libnvidia-glcore: New package, split from libgl1-nvidia-glx.
