--- a/debian/changelog
+++ b/debian/changelog
@@ -23,16 +23,28 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * bug-control, bug-script: Collect some information about OpenCL (352.79-6).
   * Use nvidia:kmod:binary and nvidia:kmod:source substvars (304.88-5).
   * Use an empty nvidia:legacy-check substvar for legacy packages (352.79-6).
+  * use-nv-kernel-ARCH.o_shipped.patch: Synchronize with unstable (304.88-5).
   * separate-makefile-kbuild.patch: New, don't make all Makefile targets
     available to Kbuild (352.79-6).
-  * KERNEL_UNAME.patch: New, allow usage of KERNEL_UNAME as in 340.xx onwards
+  * KERNEL_UNAME.patch: New, allow usage of KERNEL_UNAME as in 355.xx onwards
     (352.79-6).
   * modernize-conftest.patch: Update the conftest.sh build_cflags() function
     to the one from 352.79.
-  * Pass only the kernel version via KERNEL_UNAME and let the module build
-    system figure out the paths (352.79-2).
+  * use-kbuild-compiler.patch: New patch to build with Kbuild's version of the
+    compiler instead of system default, thanks to Luca (352.79-2).
   * Use NVIDIA's conftest.sh script to determine settings during module build
     instead of our manually maintained conftest.h header (352.79-2).
+  * conftest-verbose.patch: New patch to dump dynamically generated conftest
+    headers (352.79-2).
+  * conftest-via-kbuild.patch: New patch to call conftest.sh from within
+    kbuild (and therefore with kbuild's compiler and flags) as in 355.xx
+    (352.79-2).
+  * use-kbuild-flags.patch: New, use KBUILD_CFLAGS from Kbuild to
+    support building a 64-bit kernel module with 32-bit userspace (352.79-5).
+  * Pass only the kernel version via KERNEL_UNAME and let the module build
+    system figure out the paths (352.79-2).
+  * Clear ARCH variable from environment before dkms build, thanks to Luca
+    (352.79-2).
   * Disable conftest.sh checks cc_version_check, xen_sanity_check.
   * Bump Standards-Version to 3.9.8. No changes needed.
   * Update lintian overrides.
