--- a/debian/changelog
+++ b/debian/changelog
@@ -43,8 +43,8 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
     support building a 64-bit kernel module with 32-bit userspace (352.79-5).
   * Pass only the kernel version via KERNEL_UNAME and let the module build
     system figure out the paths (352.79-2).
-  * Clear ARCH variable from environment before dkms build, thanks to Luca
-    (352.79-2).
+  * Clear ARCH variable from environment before module build, thanks to Luca
+    (352.79-2, 352.79-5).
   * Disable conftest.sh checks cc_version_check, xen_sanity_check.
   * Bump Standards-Version to 3.9.8. No changes needed.
   * Update lintian overrides.
