--- a/debian/changelog
+++ b/debian/changelog
@@ -1,53 +1,59 @@
 nvidia-graphics-drivers (340.96-1+) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
+  * Stop special-casing of the nvidia-alternative substitution (352.79-6).
+  * rules: Drop support for ancient .run layout (352.79-4).
+  * nvidia-detect: Drop support for lenny and squeeze(-lts) (EoL) (352.79-5).
   * Do not run dh_strip_nondeterminism, it may perform modifications not
     permitted by the NVIDIA license (340.96-4).
-  * Stop special-casing of the nvidia-alternative substitution.
-  * Use #!armhf# and #HAS_UVM# substitutions as in unstable.
-  * rules: Drop support for ancient .run layout.
+  * Use #!armhf# and #HAS_UVM# substitutions as in unstable (340.76-5).
   * Add slave alternative for libnvcuvid.so (340.96-3).
   * rules, rules.defs: Synchronize variable naming with unstable (352.79-3).
+  * rules, control: Synchronize substvars with unstable (352.79-3).
   * get-orig-source: Synchronize with unstable (352.79-3).
   * bug-script: Synchronize with unstable (352.79-3).
-  * bug-control.mk: New script to generate bug-control.
-  * bug-control, bug-script: Collect some information about OpenCL.
+  * bug-control.mk: New script to generate bug-control (352.79-4).
+  * bug-control, bug-script: Collect some information about OpenCL (352.79-6).
+  * Use an empty nvidia:legacy-check substvar for legacy packages (352.79-6).
+  * separate-makefile-kbuild.patch: New, don't make all Makefile targets
+    available to Kbuild (352.79-6).
+  * KERNEL_UNAME.patch: New, allow usage of KERNEL_UNAME as in 355.xx onwards
+    (352.79-6).
   * use-kbuild-compiler.patch: New patch to build with Kbuild's version of the
-    compiler instead of system default, thanks to Luca.
+    compiler instead of system default, thanks to Luca (352.79-2).
   * Use NVIDIA's conftest.sh script to determine settings during module build
-    instead of our manually maintained conftest.h header.
+    instead of our manually maintained conftest.h header (352.79-2).
   * conftest-verbose.patch: New patch to dump dynamically generated conftest
-    headers.
+    headers (352.79-2).
   * conftest-via-kbuild.patch: New patch to call conftest.sh from within
-    kbuild (and therefore with kbuild's compiler and flags) as in 355.xx.
+    kbuild (and therefore with kbuild's compiler and flags) as in 355.xx
+    (352.79-2).
+  * use-kbuild-flags.patch: New, use KBUILD_CFLAGS from Kbuild to
+    support building a 64-bit kernel module with 32-bit userspace (352.79-5).
   * disable-cc_version_check.patch: New patch to disable a useless check that
     tests the running kernel instead of the compilation target.
   * disable-preempt_rt_sanity_check.patch: New patch to disable a check we
-    already skipped in our conftest.h.
+    already skipped in our conftest.h (352.79-2).
   * Pass only the kernel version via KERNEL_UNAME and let the module build
-    system figure out the paths.
-  * Clear ARCH variable from environment before dkms build, thanks to Luca.
+    system figure out the paths (352.79-2).
+  * Clear ARCH variable from environment before module build, thanks to Luca
+    (352.79-2, 352.79-5).
+  * arm-outer-sync.patch: New patch to fix armhf kernel module build for
+    Linux 4.3, thanks to Luca (340.93-5).
   * ignore_xen_on_arm.patch: Update to add workaround for conftest.sh to fix
     kernel module build failure on armhf by forcing XEN_PRESENT=0 when
-    building on armhf, thanks to Luca.
-  * nvidia-detect: Drop support for lenny (EoL) and squeeze (EoL).
+    building on armhf, thanks to Luca (352.79-2).
+  * Add page-cache-release.patch (352.79-7), vm-fault-minor.patch (uvm only)
+    (352.79-7) and get-user-pages.patch (352.79-8) to fix kernel module build
+    for Linux 4.6, thanks to Luca.
   * nvidia-detect: Update list of newer PCI IDs from release 352.79.
-  * use-kbuild-flags.patch: New, use KBUILD_CFLAGS from Kbuild to
-    support building a 64-bit kernel module with 32-bit userspace.
-  * Add B-D: dpkg-dev (>= 1.17) for dpkg-parsechangelog --show-field.
+  * Add B-D: dpkg-dev (>= 1.17) for dpkg-parsechangelog --show-field
+    (352.79-6).
+  * Stop shipping unused pci.ids file.
   * Bump Standards-Version to 3.9.8. No changes needed.
   * Update lintian overrides.
-  * Stop shipping unused pci.ids file.
 
   [ Luca Boccassi ]
-  * arm-outer-sync.patch: backport from trunk to fix kernel module build
-    failure on kernel 4.3 and higher on armhf.
-  * unset ARCH in debian/module/debian/rules.in as well as in dkms.conf,
-    otherwise the wrong value is passed to NVIDIA's conftest and build
-    system (expects kernel arch, is set to Debian binary arch). Fixes fail
-    to build module via nvidia-kernel-source package.
-  * Add page-cache-release.patch, vm-fault-minor.patch (uvm only) and
-    get-user-pages.patch to fix kernel module build failure on Linux 4.6.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 11:34:10 +0100
 
