--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (358.16-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (358.16-1) experimental; urgency=medium
 
   [ Luca Boccassi ]
   * New upstream short lived branch release 358.16 (2015-11-20).
@@ -83,7 +83,7 @@ nvidia-graphics-drivers (358.16-1) UNRELEASED; urgency=medium
     new nvidia-modeset module.
   * get-orig-source: Generate .orig-$ARCH.tar.gz for each architecture.
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 24 Nov 2015 02:15:05 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 15 Jul 2016 09:36:59 +0200
 
 nvidia-graphics-drivers (355.11-6) experimental; urgency=medium
 
