shuffle some bits around
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/361@6657 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,7 +34,7 @@ nvidia-graphics-drivers (361.45.18-1) UNRELEASED; urgency=medium
     - Fixed a regression that caused the HSync and VSync mode timing polarity
       flags to be inverted.
   * New upstream long lived branch release 361.28 (2016-02-09).
-    (Closes: #814347)
+    (Closes: #814347, #829043)
     - Added support for the following GPU: GeForce 945A.
     - Added a legacy, non-GLVND libGL.so GLX client library to the NVIDIA
       Linux driver installer package, and the ability to select between a
