--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 nvidia-graphics-drivers (364.19-1) UNRELEASED; urgency=medium
 
+  [ Luca Boccassi ]
   * New upstream short lived branch release 364.19 (2016-04-22).
     - Fixed some locking issues in libnvidia-egl-wayland.so.
     - Fixed several libnvidia-egl-wayland.so interaction problems with
@@ -70,6 +71,9 @@ nvidia-graphics-drivers (364.19-1) UNRELEASED; urgency=medium
     library implements the Vulkan APIs, libvulkan1 and suggest vulkan-info in
     order to support Vulkan. Make nvidia-driver depend on it. (Closes: #827188)
   * Restrict watch file to releases from the 364.xx short lived branch.
+
+  [ Andreas Beckmann ]
+  * nvidia-driver-libs: Prefer libgl1-glvnd-nvidia-glx over libgl1-nvidia-glx.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 06 Apr 2016 22:21:26 +0100
 
