new package libnvidia-egl-wayland
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/364@6678 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -74,6 +74,7 @@ nvidia-graphics-drivers (364.19-1) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * nvidia-driver-libs: Prefer libgl1-glvnd-nvidia-glx over libgl1-nvidia-glx.
+  * libnvidia-egl-wayland: New package for libnvidia-egl-wayland.so.$VERSION.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 06 Apr 2016 22:21:26 +0100
 
