--- a/debian/changelog
+++ b/debian/changelog
@@ -53,7 +53,9 @@ nvidia-graphics-drivers (367.35-1) UNRELEASED; urgency=medium
   * Update watch file to point to 367 release
   * Update nv-readme.ids
   * Update symbols files
-  * Drop drm_mode_fb_cmd2.patch, fixed upstream.
+
+  [ Andreas Beckmann ]
+  * drm-mode-fb-cmd2.patch, get-user-pages-drm.patch: Drop, fixed upstream.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 16 Jul 2016 14:56:07 +0200
 
